Jubilee The Second

--- a/app/views/appointment/rendezvous.html.erb
+++ b/app/views/appointment/rendezvous.html.erb
@@ -1,4 +1,4 @@
-<h1>Appointment#rendezvous</h1>
+<h1>Appointment rendezvous</h1>
 <p>The Time Now is <%=Time.now%></p>
 
 <form class="form-horizontal col-md-6" role="form">
