--- a/app/views/partners/subscribe.html.erb
+++ b/app/views/partners/subscribe.html.erb
@@ -1,6 +1,6 @@
 
 <div class="page-header">
-        <h1>Thank you for choosing to partner with us</h1>
+        <h1>Thank you for Choosing to partner with Us</h1>
       </div>
       <div class="row">
         <div class="col-sm-4">
@@ -58,3 +58,6 @@
           </div>
         </div><!-- /.col-sm-4 -->
       </div>
+<div>
+  <h2>Testimonies</h2>
+</div>
